More thorough testing of product and sum calls.